--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -16,5 +16,5 @@ nav {
     padding-right: 40px;
     padding-top: 80px;
     padding-bottom: 20px;
-    background-color: firebrick;
+    background-color: black;
 }
