--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -18,3 +18,21 @@ nav {
     padding-bottom: 20px;
     background-color: black;
 }
+
+.search-button {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 40px;
+    height: 40px;
+    background: none;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+.search-icon {
+    width: 100%;
+    height: 100%;
+    color: white;
+}
