--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -18,6 +18,8 @@
                     </svg>
                 </button>
 
+                <h1 class="website-title1">BASROBA</h1>
+
                 <div class="navs-div">
                     <button class="favorite-button">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill favorite-icon" viewBox="0 0 16 16">
