--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -18,7 +18,7 @@
                     </svg>
                 </button>
 
-                <h1 class="website-title1">BASROBA</h1>
+                <img src="{% static 'pics/Logo.jpg' %}" alt="" class="website-title1">
 
                 <div class="navs-div">
                     <button class="favorite-button">
