--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -125,7 +125,7 @@ nav {
 
 .website-title1 {
     position: absolute;
-    top: 0;
+    top: 50px;
     left: 50%;
     transform: translateX(-50%);
     width: 100px;
