--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="{% static 'css/layout.css' %}">
+        <link href="https://fonts.googleapis.com/css2?family=Nico+Moji&display=swap" rel="stylesheet">
 
         {% block head %}{% endblock %}
     </head>
@@ -18,7 +19,7 @@
                     </svg>
                 </button>
 
-                <img src="{% static 'pics/Logo.jpg' %}" alt="" class="website-title1">
+                <h1 class="website-title1">BASROBA</h1>
 
                 <div class="navs-div">
                     <button class="favorite-button">
