--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="{% static 'css/layout.css' %}">
-        <link href="https://fonts.googleapis.com/css2?family=Nico+Moji&display=swap" rel="stylesheet">
 
         {% block head %}{% endblock %}
     </head>
@@ -20,6 +19,7 @@
                 </button>
 
                 <h1 class="website-title1">BASROBA</h1>
+                <h1 class="website-title2">BE WHO YOU ARE</h1>
 
                 <div class="navs-div">
                     <button class="favorite-button">
@@ -42,6 +42,13 @@
                             </svg>
                         </button>
                     </div>
+                </div>
+
+                <div class="navs-navs">
+                    <a href="" class="nav1">კაცები</a>
+                    <a href="" class="nav1">ქალები</a>
+                    <a href="" class="nav1">კოლექციები</a>
+                    <a href="" class="nav1">ფასდაკლებები</a>
                 </div>
             </div>
         </nav>
