--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/earlyaccess/nicomoji.css);
+
 body {
     background-color: black;
     padding: 0;
@@ -125,12 +127,23 @@ nav {
 
 .website-title1 {
     position: absolute;
-    top: 50px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100px;
-    height: 100px;
-    font-size: 25px;
+    top: 60px;
+    left: 45%;
+    transform: translateX(-45%);
+    width: max-content;
+    height: max-content;
+    font-size: 32px;
     font-family: 'Nico Moji';
+    color: white;
+}
+
+.website-title2 {
+    position: absolute;
+    top: 110px;
+    left: 45%;
+    transform: translateX(-45%);
+    width: max-content;
+    height: max-content;
+    font-size: 15px;
     color: white;
 }
