--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -18,8 +18,10 @@
                     </svg>
                 </button>
 
-                <h1 class="website-title1">BASROBA</h1>
-                <h1 class="website-title2">BE WHO YOU ARE</h1>
+                <div class="website-titles">
+                    <h1 class="website-title1">BASROBA</h1>
+                    <h1 class="website-title2">BE WHO YOU ARE</h1>
+                </div>
 
                 <div class="navs-div">
                     <button class="favorite-button">
@@ -45,10 +47,10 @@
                 </div>
 
                 <div class="navs-navs">
-                    <a href="" class="nav1">კაცები</a>
-                    <a href="" class="nav1">ქალები</a>
-                    <a href="" class="nav1">კოლექციები</a>
-                    <a href="" class="nav1">ფასდაკლებები</a>
+                    <a href="" class="nav nav1">კაცები</a>
+                    <a href="" class="nav nav2">ქალები</a>
+                    <a href="" class="nav nav3">კოლექციები</a>
+                    <a href="" class="nav nav4">ფასდაკლებები</a>
                 </div>
             </div>
         </nav>
