--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -1,178 +1,10 @@
-@import url(https://fonts.googleapis.com/earlyaccess/nicomoji.css);
-
 body {
-    background-color: black;
     padding: 0;
     margin: 0;
+    background-color: rgb(66, 65, 65);
 }
 
 nav {
     position: relative;
     top: 0;
-    left: 0;
-    width: calc(100% - 80px);
-    height: 110px;
-    padding: 0;
-    margin: 0;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 80px;
-    padding-bottom: 20px;
-    background-color: black;
-}
-
-.search-button {
-    position: absolute;
-    top: 0;
-    left: 40px;
-    width: 40px;
-    height: 40px;
-    background: none;
-    outline: none;
-    border: none;
-    cursor: pointer;
-    margin-top: 80px;
-    display: none;
-}
-
-.website-titles {
-    width: 100%;
-    position: absolute;
-}
-
-.search-icon {
-    width: 100%;
-    height: 100%;
-    color: white;
-}
-
-.favorite-button {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 40px;
-    height: 40px;
-    background: none;
-    outline: none;
-    border: none;
-    cursor: pointer;
-    display: inline-block;
-}
-
-.favorite-icon {
-    width: 100%;
-    height: 100%;
-    color: white;
-}
-
-.cart-button {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 40px;
-    height: 40px;
-    background: none;
-    outline: none;
-    border: none;
-    cursor: pointer;
-    display: inline-block;
-}
-
-.cart-icon {
-    width: 100%;
-    height: 100%;
-    color: white;
-}
-
-.lang-text {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: max-content;
-    height: max-content;
-    padding: 0;
-    margin: 0;
-    font-size: 25px;
-    font-weight: bold;
-    color: white;
-    display: inline-block;
-}
-
-.lang-button {
-    position: relative;
-    top: 12px;
-    left: 0;
-    width: 40px;
-    height: 40px;
-    background: none;
-    outline: none;
-    border: none;
-    cursor: pointer;
-}
-
-.lang-icon {
-    width: 100%;
-    height: 100%;
-    color: white;
-}
-
-.lang-part {
-    position: relative;
-    display: inline;
-    top: -10px;
-}
-
-.navs-div {
-    position: absolute;
-    top: 0;
-    right: 40px;
-    width: max-content;
-    height: max-content;
-    margin-top: 80px;
-    display: none;
-}
-
-.website-title1 {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: max-content;
-    font-size: 32px;
-    text-align: center;
-    font-family: 'Nico Moji';
-    color: white;
-}
-
-.website-title2 {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    text-align: center;
-    height: max-content;
-    font-size: 15px;
-    color: white;
-}
-
-.nav {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: max-content;
-    height: max-content;
-    padding: 0;
-    margin: 0;
-    display: inline-block;
-    font-size: 15px;
-    font-weight: normal;
-    color: white;
-    text-decoration: none;
-    margin-right: 5px;
-    margin-left: 5px;
-}
-
-.navs-navs {
-    position: absolute;
-    top: 160px;
-    left: 45%;
-    transform: translateX(-45%);
 }
