--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/earlyaccess/nicomoji.css);
+
 body {
     padding: 0;
     margin: 0;
@@ -13,4 +15,73 @@ nav {
     padding-top: 70px;
     padding-left: 40px;
     padding-right: 40px;
+}
+
+
+.search-button {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    margin: 0;
+    padding: 0;
+    margin-left: 40px;
+    margin-top: 85px;
+    outline: none;
+    border: none;
+    background: none;
+}
+
+.search-icon {
+    width: 100%;
+    height: 100%;
+    color: white;
+}
+
+.website-titles {
+    display: block;
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: max-content;
+    background-color: aqua;
+    text-align: center;
+    z-index: -2;
+}
+
+.website-title1 {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: max-content;
+    padding: 0;
+    margin: 0;
+    font-size: 35px;
+    font-family: "Nico Moji";
+    font-weight: bold;
+}
+
+.website-title2 {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: max-content;
+    padding: 0;
+    margin: 0;
+    font-size: 20px;
+    font-weight: normal;
+    font-family: "Nico Moji";
+}
+
+.navs-div {
+    display: none;
+}
+
+.navs-navs {
+    display: none;
 }
