--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -63,6 +63,7 @@ nav {
     font-size: 35px;
     font-family: "Nico Moji";
     font-weight: bold;
+    color: white;
 }
 
 .website-title2 {
@@ -76,6 +77,7 @@ nav {
     font-size: 20px;
     font-weight: normal;
     font-family: "Nico Moji";
+    color: white;
 }
 
 .navs-div {
@@ -83,5 +85,33 @@ nav {
 }
 
 .navs-navs {
-    display: none;
+    display: block;
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: max-content;
+    padding: 0;
+    margin: 0;
+    font-size: 20px;
+    font-weight: normal;
+    color: white;
+    display: flex;
+    align-content: center;
+
+}
+
+.nav {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: max-content;
+    padding: 0;
+    margin: 0;
+    font-size: 20px;
+    font-weight: normal;
+    color: white;
+    text-decoration: none;
+    display: inline-block;
 }
