--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -96,8 +96,8 @@ nav {
     font-size: 20px;
     font-weight: normal;
     color: white;
+    align-items: center;
     display: flex;
-    align-content: center;
 
 }
 
@@ -105,7 +105,7 @@ nav {
     position: relative;
     top: 0;
     left: 0;
-    width: 100%;
+    width: max-content;
     height: max-content;
     padding: 0;
     margin: 0;
