--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -37,12 +37,14 @@
                     </button>
 
                     <div class="lang-part">
-                        <h1 class="lang-text">ქართ</h1>
+                        <h1 class="lang-text">ქართ
+
                         <button class="lang-button">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down lang-icon" viewBox="0 0 16 16">
                                 <path d="M3.204 5h9.592L8 10.481zm-.753.659 4.796 5.48a1 1 0 0 0 1.506 0l4.796-5.48c.566-.647.106-1.659-.753-1.659H3.204a1 1 0 0 0-.753 1.659"/>
                             </svg>
                         </button>
+                        </h1>
                     </div>
                 </div>
 
