--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -12,18 +12,14 @@
     <body>
         <nav>
             <div class="navigation-div1">
-                <button class="search-button">
+                <div id="menu-together">
+                    <button class="search-button">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search search-icon" viewBox="0 0 16 16">
                         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
                     </svg>
-                </button>
+                    </button>
 
-                <div class="website-titles">
-                    <h1 class="website-title1">BASROBA</h1>
-                    <h1 class="website-title2">BE WHO YOU ARE</h1>
-                </div>
-
-                <div class="navs-div">
+                    <div class="navs-div">
                     <button class="favorite-button">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill favorite-icon" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
@@ -46,6 +42,19 @@
                         </button>
                         </h1>
                     </div>
+                    </div>
+                </div>
+                
+                <!-- Burger Menu -->
+                <div class="burger" id="burger">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+
+                <div class="website-titles">
+                    <h1 class="website-title1">BASROBA</h1>
+                    <h1 class="website-title2">BE WHO YOU ARE</h1>
                 </div>
 
                 <div class="navs-navs">
