--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -1,236 +1,22 @@
-@import url(https://fonts.googleapis.com/earlyaccess/nicomoji.css);
-
-body {
-    padding: 0;
-    margin: 0;
-    background-color: black;
-}
-
-nav {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: calc(100vw - 80px);
-    height: max-content;
-    padding-top: 70px;
-    padding-left: 40px;
-    padding-right: 40px;
-    background-color: black;
-    padding-bottom: 20px;
-}
-
-
-.search-button {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 30px;
-    height: 30px;
-    margin: 0;
-    padding: 0;
-    margin-left: 40px;
-    margin-top: 85px;
-    outline: none;
-    border: none;
-    background: none;
-}
-
-.search-icon {
-    width: 100%;
-    height: 100%;
-    color: white;
-}
-
-.website-titles {
-    display: block;
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: max-content;
-    text-align: center;
-}
-
-.website-title1 {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: max-content;
-    padding: 0;
-    margin: 0;
-    font-size: 35px;
-    font-family: "Nico Moji";
-    font-weight: bold;
-    color: white;
-}
-
-.website-title2 {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: max-content;
-    padding: 0;
-    margin: 0;
-    font-size: 20px;
-    font-weight: normal;
-    font-family: "Nico Moji";
-    color: white;
-}
-
-.navs-div {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: max-content;
-    height: max-content;
-    margin: 0;
-    padding: 0;
-    margin-top: 80px;
-    margin-right: 40px;
-}
-
-.favorite-button {
-    position: relative;
-    top: 0;
-    left: 0;
-    background: none;
-    outline: none;
-    border: none;
-    color: white;
-}
-
-.cart-button {
-    position: relative;
-    top: 0;
-    left: 0;
-    background: none;
-    outline: none;
-    border: none;
-    color: white; 
-}
-
-.lang-part {
-    position: relative;
-    top: 0;
-    display: inline-block;
-    left: 0;
-    width: max-content;
-    height: max-content;
-}
-
-.lang-text {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: max-content;
-    height: max-content;
-    padding: 0;
-    margin: 0;
-    color: white;
-    font-size: 20px;
-}
-
-.lang-button {
-    position: relative;
-    top: 0;
-    left: 0;
-    background: none;
-    color: white;
-    outline: none;
-    border: none;
-    display: inline-block;
-}
-
-.navs-navs {
-    display: block;
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: max-content;
-    padding: 0;
-    margin: 0;
-    font-size: 20px;
-    font-weight: normal;
-    color: white;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
-
-}
-
-.nav {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: max-content;
-    height: max-content;
-    padding: 0;
-    margin: 0;
-    font-size: 20px;
-    font-weight: normal;
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-}
-
-/* Burger menu button */
-.burger {
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 25px;
-    height: 20px;
-    cursor: pointer;
-    margin-top: 85px;
-    margin-left: 40px;
-}
-
-.burger div {
-    width: 100%;
-    height: 3px;
-    background-color: white;
-}
-
-/* Responsive adjustments */
-@media screen and (max-width: 768px) {
-    .navs-navs {
-        display: none;
-        flex-direction: column;
-        gap: 15px;
-        text-align: center;
-        background-color: black;
-        position: absolute;
-        top: 140px;
-        left: 0;
-        width: 100%;
-        padding: 10px 0;
-        z-index: 999;
-    }
-
-    .navs-navs.active {
-        display: flex;
-    }
-
-    .burger {
-        display: flex;
-        position: absolute;
-        right: 40px;
-        top: 85px;
-    }
-
-    .navs-div {
-        margin-top: 20px;
-        margin-right: 20px;
-    }
-
-    .website-titles {
-        padding-top: 20px;
-    }
+@import url('https://fonts.googleapis.com/earlyaccess/nicomoji.css');
+body{margin:0;padding:0;background:black;font-family:"Nico Moji"}
+nav{position:relative;width:100%;background:black;color:white}
+.nav-top{display:flex;align-items:center;justify-content:space-between;padding:20px 40px;position:relative}
+.search-button,.favorite-button,.cart-button,.lang-button{background:none;border:none;color:white;cursor:pointer}
+.website-titles{text-align:center;flex:1}
+.website-title1{font-size:35px;font-weight:bold;margin:0}
+.website-title2{font-size:20px;margin:0}
+.nav-icons{display:flex;align-items:center;gap:20px;position:relative}
+.lang-part{display:flex;align-items:center}
+.lang-text{font-size:20px;margin:0;display:flex;align-items:center;gap:5px}
+.navs-navs{display:flex;justify-content:center;gap:20px;margin:0;padding:0;font-size:20px}
+.nav{color:white;text-decoration:none}
+.burger{display:none;flex-direction:column;justify-content:space-between;width:25px;height:20px;cursor:pointer}
+.burger div{width:100%;height:3px;background:white}
+@media screen and (max-width:768px){
+    .navs-navs{display:none;flex-direction:column;background:black;position:absolute;top:100%;left:0;width:100%;padding:10px 0}
+    .navs-navs.active{display:flex}
+    .burger{display:flex;position:absolute;right:40px;top:25px}
+    .nav-icons{gap:10px}
+    .website-titles{text-align:center}
 }
