--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -1,238 +1,189 @@
 @import url(https://fonts.googleapis.com/earlyaccess/nicomoji.css);
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     padding: 0;
     margin: 0;
     background-color: black;
+    color: white;
+    font-family: "Nico Moji", sans-serif;
 }
 
 nav {
     position: relative;
-    top: 0;
-    left: 0;
-    width: calc(100vw - 80px);
-    height: max-content;
-    padding-top: 70px;
-    padding-left: 40px;
-    padding-right: 40px;
-    background-color: black;
-    padding-bottom: 20px;
-}
-
-
-.search-button {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 30px;
-    height: 30px;
-    margin: 0;
-    padding: 0;
-    margin-left: 40px;
-    margin-top: 85px;
-    outline: none;
-    border: none;
-    background: none;
-}
-
-.search-icon {
     width: 100%;
-    height: 100%;
-    color: white;
+    padding: 20px 40px;
+    background-color: black;
+}
+
+.navigation-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
 }
 
 .website-titles {
-    display: block;
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: max-content;
     text-align: center;
+    flex: 1;
+    min-width: 200px;
 }
 
 .website-title1 {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: max-content;
-    padding: 0;
     margin: 0;
     font-size: 35px;
-    font-family: "Nico Moji";
     font-weight: bold;
-    color: white;
 }
 
 .website-title2 {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: max-content;
-    padding: 0;
     margin: 0;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: normal;
-    font-family: "Nico Moji";
-    color: white;
 }
 
-.navs-div {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: max-content;
-    height: max-content;
-    margin: 0;
-    padding: 0;
-    margin-top: 80px;
-    margin-right: 40px;
-}
-
-.favorite-button {
-    position: relative;
-    top: 0;
-    left: 0;
+.mobile-menu-toggle {
+    display: none;
     background: none;
-    outline: none;
     border: none;
     color: white;
+    font-size: 24px;
+    cursor: pointer;
 }
 
-.cart-button {
-    position: relative;
-    top: 0;
-    left: 0;
+.nav-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 15px;
+}
+
+.nav-icons {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.nav-icons button {
     background: none;
-    outline: none;
     border: none;
-    color: white; 
+    color: white;
+    cursor: pointer;
+    padding: 5px;
 }
 
 .lang-part {
-    position: relative;
-    top: 0;
-    display: inline-block;
-    left: 0;
-    width: max-content;
-    height: max-content;
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 
 .lang-text {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: max-content;
-    height: max-content;
-    padding: 0;
     margin: 0;
-    color: white;
-    font-size: 20px;
+    font-size: 16px;
 }
 
-.lang-button {
-    position: relative;
-    top: 0;
-    left: 0;
-    background: none;
-    color: white;
-    outline: none;
-    border: none;
-    display: inline-block;
-}
-
-.navs-navs {
-    display: block;
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: max-content;
-    padding: 0;
-    margin: 0;
-    font-size: 20px;
-    font-weight: normal;
-    color: white;
-    align-items: center;
+.nav-links {
     display: flex;
-    justify-content: center;
     gap: 20px;
-    margin-top: 20px;
-
 }
 
-.nav {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: max-content;
-    height: max-content;
-    padding: 0;
-    margin: 0;
-    font-size: 20px;
-    font-weight: normal;
+.nav-link {
     color: white;
     text-decoration: none;
-    display: inline-block;
+    font-size: 16px;
+    transition: opacity 0.3s;
 }
 
-@media screen and (max-width: 720px) {
-    #menu-together {
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        width: 80%;
-        height: 100vh;
-        background-color: gray;
-    }
+.nav-link:hover {
+    opacity: 0.7;
+}
 
-    .navs-navs {
-        position: relative;
-        justify-content: normal;
+/* Responsive styles */
+@media screen and (max-width: 900px) {
+    nav {
+        padding: 20px;
+    }
+    
+    .website-title1 {
+        font-size: 28px;
+    }
+    
+    .website-title2 {
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .navigation-container {
+        justify-content: center;
+    }
+    
+    .mobile-menu-toggle {
         display: block;
-    }
-
-    .nav {
-        display: block;
-        width: 80%;
-        left: 20%;
-        font-size: 30px;
-        margin-bottom: 10px;
-        top: 150px;
-    }
-
-    .search-button {
-    }
-
-    .favorite-button {
-        width: 30px;
-        height: 30px;
-        margin-right: 20px;
-    }
-
-    .cart-button {
-        width: 30px;
-        height: 30px;
-        margin-right: 20px;
-    }
-
-    .favorite-icon {
-        width: 30px;
-        height: 30px;
-    }
-
-    .cart-icon {
-        width: 30px;
-        height: 30px;
-    }
-
-    .navs-div {
         position: absolute;
-        bottom: 40px;
+        right: 20px;
+        top: 30px;
+    }
+    
+    .nav-content {
+        position: fixed;
+        top: 80px;
+        right: -100%;
+        width: 250px;
+        height: calc(100vh - 80px);
+        background-color: #333;
+        padding: 20px;
+        transition: right 0.3s ease;
+        z-index: 1000;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
+    .nav-content.active {
+        right: 0;
+    }
+    
+    .nav-icons {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 15px;
+        width: 100%;
+    }
+    
+    .nav-links {
+        flex-direction: column;
+        gap: 15px;
+        width: 100%;
+    }
+    
+    .nav-link {
+        font-size: 18px;
+        padding: 8px 0;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .website-titles {
+        min-width: auto;
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    
+    .website-title1 {
+        font-size: 24px;
+    }
+    
+    nav {
+        padding: 15px;
+    }
+    
+    .mobile-menu-toggle {
+        top: 20px;
     }
 }
