--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -1,189 +1,242 @@
 @import url(https://fonts.googleapis.com/earlyaccess/nicomoji.css);
 
-* {
-    box-sizing: border-box;
-}
-
 body {
     padding: 0;
     margin: 0;
     background-color: black;
-    color: white;
-    font-family: "Nico Moji", sans-serif;
 }
 
 nav {
     position: relative;
-    width: 100%;
-    padding: 20px 40px;
+    top: 0;
+    left: 0;
+    width: calc(100vw - 80px);
+    height: max-content;
+    padding-top: 70px;
+    padding-left: 40px;
+    padding-right: 40px;
     background-color: black;
+    padding-bottom: 20px;
 }
 
-.navigation-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
+
+.search-button {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    margin: 0;
+    padding: 0;
+    margin-left: 40px;
+    margin-top: 85px;
+    outline: none;
+    border: none;
+    background: none;
+}
+
+.search-icon {
+    width: 100%;
+    height: 100%;
+    color: white;
 }
 
 .website-titles {
+    display: block;
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: max-content;
     text-align: center;
-    flex: 1;
-    min-width: 200px;
 }
 
 .website-title1 {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: max-content;
+    padding: 0;
     margin: 0;
     font-size: 35px;
+    font-family: "Nico Moji";
     font-weight: bold;
+    color: white;
 }
 
 .website-title2 {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: max-content;
+    padding: 0;
     margin: 0;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: normal;
+    font-family: "Nico Moji";
+    color: white;
 }
 
-.mobile-menu-toggle {
-    display: none;
+.navs-div {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: max-content;
+    height: max-content;
+    margin: 0;
+    padding: 0;
+    margin-top: 80px;
+    margin-right: 40px;
+}
+
+.favorite-button {
+    position: relative;
+    top: 0;
+    left: 0;
     background: none;
+    outline: none;
     border: none;
     color: white;
-    font-size: 24px;
-    cursor: pointer;
 }
 
-.nav-content {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    gap: 15px;
-}
-
-.nav-icons {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-
-.nav-icons button {
+.cart-button {
+    position: relative;
+    top: 0;
+    left: 0;
     background: none;
+    outline: none;
     border: none;
-    color: white;
-    cursor: pointer;
-    padding: 5px;
+    color: white; 
 }
 
 .lang-part {
-    display: flex;
-    align-items: center;
-    gap: 5px;
+    position: relative;
+    top: 0;
+    display: inline-block;
+    left: 0;
+    width: max-content;
+    height: max-content;
 }
 
 .lang-text {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: max-content;
+    height: max-content;
+    padding: 0;
     margin: 0;
-    font-size: 16px;
+    color: white;
+    font-size: 20px;
 }
 
-.nav-links {
+.lang-button {
+    position: relative;
+    top: 0;
+    left: 0;
+    background: none;
+    color: white;
+    outline: none;
+    border: none;
+    display: inline-block;
+}
+
+.navs-navs {
+    display: block;
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: max-content;
+    padding: 0;
+    margin: 0;
+    font-size: 20px;
+    font-weight: normal;
+    color: white;
+    align-items: center;
     display: flex;
+    justify-content: center;
     gap: 20px;
+    margin-top: 20px;
+
 }
 
-.nav-link {
+.nav {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: max-content;
+    height: max-content;
+    padding: 0;
+    margin: 0;
+    font-size: 20px;
+    font-weight: normal;
     color: white;
     text-decoration: none;
-    font-size: 16px;
-    transition: opacity 0.3s;
+    display: inline-block;
 }
 
-.nav-link:hover {
-    opacity: 0.7;
-}
-
-/* Responsive styles */
-@media screen and (max-width: 900px) {
-    nav {
-        padding: 20px;
-    }
-    
-    .website-title1 {
-        font-size: 28px;
-    }
-    
-    .website-title2 {
-        font-size: 14px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .navigation-container {
-        justify-content: center;
-    }
-    
-    .mobile-menu-toggle {
-        display: block;
-        position: absolute;
-        right: 20px;
-        top: 30px;
-    }
-    
-    .nav-content {
+@media screen and (max-width: 720px) {
+    #menu-together {
         position: fixed;
-        top: 80px;
-        right: -100%;
-        width: 250px;
-        height: calc(100vh - 80px);
-        background-color: #333;
-        padding: 20px;
-        transition: right 0.3s ease;
-        z-index: 1000;
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    
-    .nav-content.active {
-        right: 0;
-    }
-    
-    .nav-icons {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 15px;
+        z-index: 1;
+        top: 0;
+        left: 0;
         width: 100%;
+        height: 100vh;
+        background-color: rgba(68, 68, 68, 0.438);
     }
-    
-    .nav-links {
-        flex-direction: column;
-        gap: 15px;
-        width: 100%;
-    }
-    
-    .nav-link {
-        font-size: 18px;
-        padding: 8px 0;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-        width: 100%;
-    }
-}
 
-@media screen and (max-width: 480px) {
-    .website-titles {
-        min-width: auto;
+    .navs-navs {
+        position: relative;
+        justify-content: normal;
+        display: block;
+        margin-top: 200px;
+    }
+
+    .nav {
+        display: block;
         width: 100%;
+        left: 0%;
+        font-size: 30px;
         margin-bottom: 10px;
+        top: 150px;
+        text-align: center;
     }
-    
-    .website-title1 {
-        font-size: 24px;
+
+    .search-button {
+
     }
-    
-    nav {
-        padding: 15px;
+
+    .favorite-button {
+        bottom: 40px;
+        width: 30px;
+        height: 30px;
+        margin-right: 20px;
     }
-    
-    .mobile-menu-toggle {
-        top: 20px;
+
+    .cart-button {
+        width: 30px;
+        height: 30px;
+        margin-right: 20px;
+    }
+
+    .favorite-icon {
+        width: 30px;
+        height: 30px;
+    }
+
+    .cart-icon {
+        width: 30px;
+        height: 30px;
+    }
+
+    .navs-div {
+        position: absolute;
+        bottom: 40px;
     }
 }
