--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -209,25 +209,33 @@ nav {
     }
 
     .search-button {
-
+        position: absolute;
+        top: 100px;
     }
 
     .favorite-button {
-        bottom: 40px;
         width: 30px;
         height: 30px;
         margin-right: 20px;
+        position: absolute;
+        top: 100px;
     }
 
     .cart-button {
         width: 30px;
         height: 30px;
         margin-right: 20px;
+        top: 100px;
+        position: absolute;
+        left: 0;
     }
 
     .favorite-icon {
         width: 30px;
         height: 30px;
+        position: absolute;
+        top: 100px;
+        left: 0;
     }
 
     .cart-icon {
@@ -235,8 +243,4 @@ nav {
         height: 30px;
     }
 
-    .navs-div {
-        position: absolute;
-        bottom: 40px;
-    }
 }
