--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -180,6 +180,24 @@ nav {
     display: inline-block;
 }
 
+.burger-menu {
+    position: absolute;
+    top: 70px;
+    right: 40px;
+    z-index: 1001;
+    width: 60px;
+}
+
+.span {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 10px;
+    background-color: white;
+    display: inline-block;
+}
+
 @media screen and (max-width: 720px) {
     #menu-together {
         position: fixed;
@@ -189,6 +207,8 @@ nav {
         width: 100%;
         height: 100vh;
         background-color: rgba(68, 68, 68, 0.438);
+        z-index: 1000;
+        display: none;
     }
 
     .navs-navs {
@@ -217,25 +237,17 @@ nav {
         width: 30px;
         height: 30px;
         margin-right: 20px;
-        position: absolute;
-        top: 100px;
     }
 
     .cart-button {
         width: 30px;
         height: 30px;
         margin-right: 20px;
-        top: 100px;
-        position: absolute;
-        left: 0;
     }
 
     .favorite-icon {
         width: 30px;
         height: 30px;
-        position: absolute;
-        top: 100px;
-        left: 0;
     }
 
     .cart-icon {
@@ -243,4 +255,15 @@ nav {
         height: 30px;
     }
 
+    .navs-div {
+        position: absolute;
+        top: 100px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .website-titles {
+        text-align: left;
+        font-size: 20px;
+    }
 }
