--- a/basroba/app/templates/index.html
+++ b/basroba/app/templates/index.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block head %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 {% endblock %}
 
 
@@ -9,4 +10,5 @@
 {% endblock %}
 
 {% block body %}
+    <img src="{% static 'pics/Picture1.png' %}" class="section1" alt="">
 {% endblock %}
