--- a/basroba/app/templates/index.html
+++ b/basroba/app/templates/index.html
@@ -11,4 +11,8 @@
 
 {% block body %}
     <img src="{% static 'pics/Picture1.png' %}" class="section1" alt="">
+
+    <section class="section2">
+        <h1 class="section2-title">კატეგორიები</h1>
+    </section>
 {% endblock %}
