--- a/basroba/app/static/css/styles.css
+++ b/basroba/app/static/css/styles.css
@@ -6,3 +6,27 @@
     height: max-content;
     object-fit: cover;
 }
+
+.section2 {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: max-content;
+    margin-top: 50px;
+}
+
+.section2-title {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: max-content;
+    padding: 0;
+    margin: 0;
+    font-size: 35px;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    letter-spacing: 100%;
+}
