--- a/basroba/app/templates/index.html
+++ b/basroba/app/templates/index.html
@@ -14,5 +14,9 @@
 
     <section class="section2">
         <h1 class="section2-title">კატეგორიები</h1>
+
+        <div class="categories-div">
+
+        </div>
     </section>
 {% endblock %}
