--- a/basroba/app/templates/profile.html
+++ b/basroba/app/templates/profile.html
@@ -10,4 +10,18 @@
 {% endblock %}
 
 {% block body %}
+    <div class="profile">
+        <div class="sidebar">
+            <h1>Username here</h1>
+            <a href="#">Profile Information</a>
+            <a href="#">Orders</a>
+            <a href="#">Address Information</a>
+        </div>
+
+        <div class="main-part">
+            <div class="main-part1">
+
+            </div>
+        </div>
+    </div>
 {% endblock %}
