--- a/basroba/app/templates/profile.html
+++ b/basroba/app/templates/profile.html
@@ -19,8 +19,20 @@
         </div>
 
         <div class="main-part">
-            <div class="main-part1">
+            <div class="main-part1" style="display: none;">
+                <h1>Profile Information</h1>
+                <input type="text" placeholder="First Name">
+                <input type="text" placeholder="Middle Name">
+                <input type="text" placeholder="Last Name">
+                <input type="number" placeholder="Id Number">
+                <input type="email" placeholder="Email Address">
+                <input type="number" placeholder="Phone Number">
 
+                <button type="submit">Save</button>
+            </div>
+
+            <div class="main-part2">
+                
             </div>
         </div>
     </div>
