--- a/basroba/app/static/css/profile.css
+++ b/basroba/app/static/css/profile.css
@@ -33,7 +33,60 @@
 }
 
 .main-part1 {
-    
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: max-content;
+}
+
+.main-part1 h1 {
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: max-content;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 50px;
+    font-size: 25px;
+    font-weight: bold;
+    color: white;
+}
+
+.main-part1 input {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: calc(100% - 20px);
+    height: max-content;
+    padding: 0;
+    margin: 0;
+    padding: 10px;
+    font-size: 15px;
+    font-weight: normal;
+    background-color: rgb(46, 46, 46);
+    border: rgb(154, 154, 154) solid 1px;
+    margin-bottom: 15px;
+    color: white;
+}
+
+.main-part1 button {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: max-content;
+    height: max-content;
+    padding: 0;
+    margin: 0;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    background-color: black;
+    padding: 10px;
+    outline: none;
+    border: none;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .sidebar h1 {
@@ -69,4 +122,3 @@
 .sidebar a:hover {
     background-color: rgb(91, 91, 91);
 }
-
