--- a/basroba/app/templates/profile.html
+++ b/basroba/app/templates/profile.html
@@ -32,7 +32,14 @@
             </div>
 
             <div class="main-part2">
+                <h1>Address Information</h1>
+                <button type="button" class="add-address">Add Address</button>
                 
+                <div class="address-div">
+                    <h2 class="address">123 Main St, City, Country</h1>
+                    <button type="button" class="change-address">Change</button>
+                    <button type="button" class="delete-address">Delete</button>
+                </div>
             </div>
         </div>
     </div>
