--- a/basroba/app/templates/profile.html
+++ b/basroba/app/templates/profile.html
@@ -31,7 +31,7 @@
                 <button type="submit">Save</button>
             </div>
 
-            <div class="main-part2">
+            <div class="main-part2" style="display: none;">
                 <h1>Address Information</h1>
                 <button type="button" class="add-address">Add Address</button>
                 
@@ -40,6 +40,10 @@
                     <button type="button" class="change-address">Change</button>
                     <button type="button" class="delete-address">Delete</button>
                 </div>
+            </div>
+
+            <div class="main-part3" style="display: block;">
+
             </div>
         </div>
     </div>
