--- a/basroba/app/templates/profile.html
+++ b/basroba/app/templates/profile.html
@@ -43,7 +43,11 @@
             </div>
 
             <div class="main-part3" style="display: block;">
+                <h1>Orders</h1>
 
+                <div class="order">
+                    <h1>Order #121412</h1>
+                </div>
             </div>
         </div>
     </div>
