--- a/basroba/app/static/css/profile.css
+++ b/basroba/app/static/css/profile.css
@@ -193,6 +193,43 @@
     border: none;
 }
 
+.main-part3 {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: max-content;
+}
+
+.main-part3 h1 {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: max-content;
+    padding: 0;
+    margin: 0;
+    font-size: 25px;
+    color: white;
+    margin-bottom: 10px;
+}
+
+.order {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: calc(100% - 40px);
+    height: max-content;
+    padding: 20px;
+    border: 1px grey solid;
+    background-color: rgb(58, 58, 58);
+}
+
+.order h1 {
+    position: relative;
+    font-size: 15px;
+}
+
 .sidebar h1 {
     position: relative;
     top: 0;
