--- a/basroba/app/templates/profile.html
+++ b/basroba/app/templates/profile.html
@@ -47,6 +47,26 @@
 
                 <div class="order">
                     <h1>Order #121412</h1>
+
+                    <div class="order-item">
+                        <img src="" alt="">
+                        <h1>Large Red T-shirt</h1>
+                    </div>
+
+                    <div class="order-item">
+                        <img src="" alt="">
+                        <h1>Large Red T-shirt</h1>
+                    </div>
+
+                    <div class="order-item">
+                        <img src="" alt="">
+                        <h1>Large Red T-shirt</h1>
+                    </div>
+
+                    <div class="order-item">
+                        <img src="" alt="">
+                        <h1>Large Red T-shirt</h1>
+                    </div>
                 </div>
             </div>
         </div>
