--- a/basroba/app/static/css/profile.css
+++ b/basroba/app/static/css/profile.css
@@ -227,7 +227,28 @@
 
 .order h1 {
     position: relative;
-    font-size: 15px;
+    font-size: 20px;
+}
+
+.order-item {
+    display: grid;
+    grid-template-columns: 1fr 0.4fr 4fr;
+    margin-bottom: 10px;
+}
+
+.order-item h1 {
+    grid-column: 3;
+}
+
+.order-item img {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background-color: white;
+    border: none;
+    outline: none;
 }
 
 .sidebar h1 {
